--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
 name: Corey Senger
 markdown: kramdown
-permalink: /projects/:year/:month/:day/:title
+collections_dir: collections
+collections:
+  projects:
+    output: true
+    permalink: /projects/:year/:month/:day/:title
+    layout: project
